--- a/index.html
+++ b/index.html
@@ -3,13 +3,20 @@
   <head>
     <title>1997MarsRover</title>
     <style>
+        main {
+            padding: 20px;
+            
+        }
         h1 {
             color: darkgreen;
         }
     </style>
   </head>
   <body>
-    <h1><a href="https://twitter.com/AnthonyGM_g">X</a></h1>
-    <p>Geometric Deep Learning</p>
+    <main>
+        <h1><a href="https://twitter.com/AnthonyGM_g">X</a></h1>
+        <p>Geometric Deep Learning</p>
+    </main>
+   
   </body>
 </html>
