--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 </nav>
         <h1><a href="https://twitter.com/AnthonyGM_g">X</a></h1>
         <p>Geometric Deep Learning</p>
+      <p>Reconstructing Human Faces from single RGB monocular videos</p>
     </main>
    
   </body>
