intro to geometric DL

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <title>1997MarsRover</title>
@@ -30,7 +29,16 @@
       <h2>Harry Porter AND the Methods of Rationality</h2>
       <p>CHAPTER 1 : A DAY OF VERY LOW
 PROBABILITY</p>
+      <h3>Graph Neural Networks</h3>
+      <p>Grounded in the structure of deep learning, Graph Neural Networks (GNNs) are a type of neural network designed to work directly with graph-structured data. This is in contrast to traditional neural networks that rely on grid-structured data.</p>
+      <p>As Michael Bronstein notes in his book "Geometric Deep Learning: Grids, Graphs, and Geodesics", GNNs can be viewed as a generalization of traditional neural networks to graph-structured data.</p>
+      <p>Mathematically, a GNN can be represented as a composition of the following layers:</p>
+      <p>1. Graph convolutional layer: This layer applies a convolutional operation to the graph-structured data, where the convolutional operation is defined as:</p>
+      <p>H = σ(U * X * W)</p>
+      <p>where H is the output of the layer, U is the adjacency matrix of the graph, X is the input data, W is the weight matrix, and σ is the activation function.</p>
+      <p>2. Graph pooling layer: This layer reduces the spatial dimensions of the graph-structured data, typically using a pooling operation such as max-pooling or average-pooling.</p>
+      <p>3. Graph readout layer: This layer generates a fixed-size vector representation of the graph-structured data, typically using a permutation-invariant function such as sum-pooling or mean-pooling.</p>
     </main>
    
   </body>
-</html>
+</html> 
