--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <h3>CUDA</h3>
             <p> Making a Cuda Guide Buide for DL trainists outhere thinking of Knowing Cuda. </p>
             <img href="assets/hieu.png">
-<a href='https://github.com/cuda-guide.git'>Cuda-Guide</a>
+<a href='https://github.com/1997MarsRover/cuda-guide'>Cuda-Guide</a>
             <h3>Deep Leaning Framworks</h3>
             <h3>Gaussian Splats on Neutral and Deformable fields</h3>
             
