--- a/index.html
+++ b/index.html
@@ -127,6 +127,20 @@
             position: relative;
             border-radius: 6px;
         }
+        .tweet  {
+            width: 50%;
+            height: 250px; /* Adjust this value to change the height of the placeholder */
+            background-color: #2C5F2D;
+            background-image: url('assets/hieu.png');
+            background-size: cover;
+            background-position: center;
+            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #D0D0D0;
+            font-size: 18px;
+        }
     </style>
 </head>
 <body>
@@ -161,7 +175,10 @@
             <h3>Linear Algebra</h3>
             <h3>CUDA</h3>
             <p> Making a Cuda Guide Buide for DL trainists outhere thinking of Knowing Cuda. </p>
-            <img href="assets/hieu.png">
+            <div class="tweet">
+             
+            </div>
+            
 <a href='https://github.com/cuda-guide.git'>Cuda-Guide</a>
             <h3>Deep Leaning Framworks</h3>
             <h3>Gaussian Splats on Neutral and Deformable fields</h3>
