--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
             <h2>About</h2>
             <p>CS student, primarily focused on Dynamic Gaussian Human Avatars Reconstruction.</p>
 
-            <p>doing a thing where am relearnig all of Deep learning and machine learning from the maths to makign GPU go Brrrrrr</p>
+            <p>doing a thing where am relearnig all of Deep learning and machine learning from the maths to making GPU go Brrrrrr</p>
         </section>
 
         <section id="research">
             <h2>Current Research</h2>
             <h3>Linear Algebra</h3>
             <h3>CUDA</h3>
-            <p> Making a Cuda Guide Buide for DL trainists outhere thinking of Knowing Cuda. </p>
+            <p> Making a Cuda Guide Guide for DL trainists out here thinking of Knowing Cuda. Am trying all my best to making it readable and understable as possible </p>
             <div class="tweet">
              
             </div>
@@ -204,7 +204,7 @@
         </section>
         <section id="contact">
             <h2>Contact</h2>
-            <p>mail: <a href="mailto:antonygithinji11156@gmail.com">antonygithinji11156@gmnail.com</a></p>
+            <p>mail: <a href="mailto:antonygithinji11156@gmail.com">antonygithinji11156@gmail.com</a></p>
             <p> message me on <a href="https://x.com/AnthonyGM_g" style="color: #f8f8f8;"> X</a></p>
         </section>
     </main>
