add new changes

--- a/index.html
+++ b/index.html
@@ -174,9 +174,12 @@
             <h2>Current Research</h2>
             <h3>Linear Algebra</h3>
             <h3>CUDA</h3>
-            <p> Making a Cuda Guide Buide for DL trainists outhere thinking of Knowing Cuda. </p>
-            <img href="assets/hieu.png">
-<a href='https://github.com/1997MarsRover/cuda-guide'>Cuda-Guide</a>
+            <p> Making a Cuda Guide Guide for DL trainists out here thinking of Knowing Cuda. Will make it readable and understable to all. Its also a personal study to get to know cuda. as @hieu Pham tweet >>></p>
+            <div class="tweet">
+  
+            </div>
+            
+<p>Conribute to >> <a href='https://github.com/1997MarsRover/cuda-guide'>Cuda-Guide</a></p>
             <h3>Deep Leaning Framworks</h3>
             <h3>Gaussian Splats on Neutral and Deformable fields</h3>
             
