--- a/index.html
+++ b/index.html
@@ -127,20 +127,21 @@
             position: relative;
             border-radius: 6px;
         }
-        .tweet  {
-            width: 50%;
-            height: 250px; /* Adjust this value to change the height of the placeholder */
-            background-color: #2C5F2D;
-            background-image: url('assets/hieu.png');
-            background-size: cover;
-            background-position: center;
-            margin-bottom: 20px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #D0D0D0;
-            font-size: 18px;
-        }
+        .tweet {
+    width: 50%;
+    height: 250px;
+    background-color: #2C5F2D;
+    background-image: url('assets/hieu.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #D0D0D0;
+    font-size: 18px;
+}
     </style>
 </head>
 <body>
