--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Researcher</title>
+    <title>Anthony Marugu - Computer-Graphics Researcher</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -142,9 +142,21 @@
     color: #D0D0D0;
     font-size: 18px;
 }
+                .embedded-video {
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
+        <div class="embedded-video">
+        <iframe width="50" height="25" src="https://www.youtube.com/embed/mmCnQDUSO4I?si=oDwd0feJJRAXFmz8&autoplay=1&mute=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    </div>
+
+    <div class="image-placeholder">
+    </div>
     <div class="image-placeholder">
   
     </div>
